--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
             </div> <!-- end container -->
             <footer>
                 <div id="footer">
-                    Images are from <a href="https://openclipart.org" target="_blank">Open Clip Art! <  https://openclipart.org ></a>
+                    Sound is from <a href="https://freesound.org" target="_blank">Free Sound ! <  https://freesound.org ></a>
                     <br>
-                    Heart shape is from <a href="https://logomakr.com" target="_blank">Logo Maker! <  https://logomakr.com ></a>
+                    Images are from <a href="https://openclipart.org" target="_blank">Open Clip Art ! <  https://openclipart.org ></a>
+                    <br>
+                    Heart shape is from <a href="https://logomakr.com" target="_blank">Logo Maker ! <  https://logomakr.com ></a>
                 </div>
             </footer><!-- end of footer -->
 
